tests/e2e/semantics/ops_add_regex_regex.error
Error: syntax error in story at line 1, column 5

1|    a = /foo/ + /bar/
          ^^^^^^^^^^^^^

E0103: `+` between `regexp` and `regexp` is not supported.
